Task 10. Unit tests. (Covered Chat View and Chat Container component. Fix CSS)

--- a/src/components/chatList/ChatList.module.css
+++ b/src/components/chatList/ChatList.module.css
@@ -2,7 +2,5 @@
   min-width: 200px;
   flex-basis: 20%;
   background-color: rgba(0, 0, 20, 0.05);
-  margin: 0 15px;
-  margin-top: 22px;
   box-sizing: content-box;
 }
