--- a/src/components/form/Form.module.sass
+++ b/src/components/form/Form.module.sass
@@ -1,7 +1,7 @@
 
 .inputForm
     flex-basis: 2em
-    background-color: aquamarine
+    //background-color: aquamarine
 
     display: flex
     padding: 0.3em
