--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -11,7 +11,7 @@
 
 .userName
     // padding: 0 10px
-    background-color: #c89a03
+    background-color: #ff7f50
     color: #f8f5ea
     border-radius: 50%
     width: 50px
